# fiis-scrapy

./: .env.model  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: pipelines.py  settings.py  utils.py
src/database/: database.py
src/spiders/: fnet.py  rendimentos.py
