[tool.poetry]
name        = "scrapy-fiis"
version     = "0.1.0"
description = ""
authors     = ["Giancarlo Lester <gatobugado.dev@gmail.com>"]
readme      = "README.md"

[tool.poetry.dependencies]
python           = "^3.10"
scrapy           = "^2.11.0"
scrapyd          = "^1.4.3"
scrapyd-client   = "^1.2.3"
scrapeops-scrapy = "^0.5.3"
python-dotenv    = "^1.0.0"
boto3            = "^1.34.2"
botocore         = "^1.34.2"
pymongo          = "^4.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ['.venv', '.ruff_cache', '.mypy_cache']
ignore         = ["F401"]
line-length    = 100
select         = ['E', 'F', 'W']
